--- a/App.html
+++ b/App.html
@@ -28,7 +28,7 @@
 
 		<button type="button" class="play-normal-btn">PLAY GAME</button>
 		<button type="button" class="play-casual-btn">CASUAL MODE</button>
-		<div class="credits">A Project game by <a href="https://www.facebook.com/im.casquejo3">Ben Howard P. Casquejo</a></div>
+		<div class="credits">A Project game by <a href="https://www.facebook.com/johnloyd.empalmado">JOHN LOYD EMPALMADO</a></div>
 	</div>
 	<div class="menu menu--pause">
 		<h1>Paused</h1>
